JDK 9 fix, dont use javax.xml.bind.DatatypeConverter for Base64, but the JDK 8 Base64 support instead.